static/css/theme.less
// out: ./theme.css, compress: true

@import "../bootstrap_less/bootstrap.less";
@import "./web2py.css";
@import "./web2py-bootstrap3.css";
@import "../fontawesome/less/font-awesome.less";
@import "./theme_colors.less";
@import "./framework_typography.less";


body                        {margin-top: 0;
                             padding-top: 50px !important;
                             font-family: @sansFonts;
    h1,
    h2,
    h3,
    h4                      {font-family: @sansFonts;
    }
    ul                      {list-style-type: None;
                             list-style-position: outside;
    }
    .modal-backdrop         {display: None;
    }
}

/*-- navbar --------------------------------------------------*/
nav,
.navbar                    {background-color: #fff;
                            border-bottom: 1px solid #efefef;
    a.navbar-brand         {font-size: @font-size-largest;
                            text-transform: uppercase;
                            letter-spacing: 2px;
                            color: @danger;
                            transition: 100ms all linear;
        &:hover            {color: darken(@danger, 10%);
                            transition: 100ms all linear;
        }
    }
    small                  {display: none;
    }
    a                      {color: darken(@pallette2, 20%);
    }
    .navbar-toggle span    {background-color:darken(@pallette2, 20%);
    }
    ul.navbar-nav li a     {
        &:hover,
        &:active           {background-color: @pallette2;
                            color: @white;
        }
    }
    .badge-wrapper         {height: 100%;
                            line-height: 100%;
                            display:inline-block;
                            float: right;
                            padding-top: 15px;
                            padding-bottom: 15px;
        #unread-counter    {border-radius: 1em;
                            color: #fff;
                            background-color: @success;
        }
    }
}

/*-- masthead --------------------------------------------------*/
div#masthead                {background-image: url('../images/town_map.png');
                             min-height: 360px;
                             margin-top: 0;
                             margin-bottom: 0;
                             padding-bottom: 0;
                             border: 0px solid transparent;
    div.jumbotron           {background: transparent;
                             background-color: rgba(255,255,255,0);
                             text-align: center;
    }
}

/*-- main --------------------------------------------------*/
main                        {background-color: @white;
                             min-height: 320px;
}

/*-- footer --------------------------------------------------*/
footer#footer               {background-color: @danger;
                             color: #fff;
                             margin-top: 0;
    div.row                 {border-top: 0px solid transparent;
                             margin:0;
                             padding:0;
        a                   {color: @warning;
        }
        p                    {padding: 0;
                              margin-bottom: 0;
        }
    }
}

/*-- index --------------------------------------------------*/
body.default.index                      {
    div.index-openmessage               {text-align: center;
                                         padding: 3em 0 2em 0;
        p.index-openmessage             {font-size: @font-size-large;
                                         padding-top: @line-height-computed;
                                         text-align: center;
        }
    }
    div.container.paragraphs            {overflow: hidden;
        div.index-contentbox            {background-color: #fff;
            p                           {margin-top: 10px;
            }
        }

        div.index-titlebox              {background-color: #efefef;
                                         margin-bottom: -99999px;
                                         padding-bottom: 99999px;
        }
    }
    div.modal-set.container                   {color: #efefef;
                                                background-color: @accent2;
                                     text-align: center;
                                     padding-top: 3em;
                                     padding-bottom: 3em;
        h4 a                        {color: @white;
                                     margin-top: 2em;
            &:hover                 {text-decoration: dotted;
            }
        }
        .info-illustration-wrapper  {text-align: center;
                                     width:100%;
            .info-pane-illustration {width:120px;
                                     background-color: #efefef;
                                     border-radius: 50%;
                                     padding:12px;
                                     margin: 0px auto;
                                     position: relative;
            }
        }
        p                       {hyphens: auto;
                                -moz-hyphens: auto;
                                -webkit-hyphens: auto;
                                -ms-hyphens: auto;
        }
    }
}
/* ... */

